// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/tasks/cache > .clear > deletes cache folder and everything inside it 1`] = `""`;

exports[`lib/tasks/cache > .list > lists all versions of cached binary 1`] = `
"┌─────────┬───────────┐
│ [37mversion[39m │ [37mlast used[39m │
├─────────┼───────────┤
│ [32m1.2.3[39m   │ unknown   │
├─────────┼───────────┤
│ [32m2.3.4[39m   │ unknown   │
└─────────┴───────────┘
"
`;

exports[`lib/tasks/cache > .list > lists all versions of cached binary with last access > list-of-versions 1`] = `
"┌─────────┬──────────────┐
│ [37mversion[39m │ [37mlast used[39m    │
├─────────┼──────────────┤
│ [32m1.2.3[39m   │ [36m3 months ago[39m │
├─────────┼──────────────┤
│ [32m2.3.4[39m   │ [36m5 days ago[39m   │
└─────────┴──────────────┘
"
`;

exports[`lib/tasks/cache > .list > lists all versions of cached binary with npm log level silent > cache list with silent log level 1`] = `
"┌─────────┬───────────┐
│ [37mversion[39m │ [37mlast used[39m │
├─────────┼───────────┤
│ [32m1.2.3[39m   │ unknown   │
├─────────┼───────────┤
│ [32m2.3.4[39m   │ unknown   │
└─────────┴───────────┘
"
`;

exports[`lib/tasks/cache > .list > lists all versions of cached binary with npm log level warn > cache list with warn log level 1`] = `
"┌─────────┬───────────┐
│ [37mversion[39m │ [37mlast used[39m │
├─────────┼───────────┤
│ [32m1.2.3[39m   │ unknown   │
├─────────┼───────────┤
│ [32m2.3.4[39m   │ unknown   │
└─────────┴───────────┘
"
`;

exports[`lib/tasks/cache > .list > shows sizes > show-size 1`] = `
"┌─────────┬──────────────┬───────┐
│ [37mversion[39m │ [37mlast used[39m    │ [37msize[39m  │
├─────────┼──────────────┼───────┤
│ [32m1.2.3[39m   │ [36m3 months ago[39m │ [90m0.2MB[39m │
├─────────┼──────────────┼───────┤
│ [32m2.3.4[39m   │ unknown      │ [90m0.2MB[39m │
└─────────┴──────────────┴───────┘
"
`;

exports[`lib/tasks/cache > .list > some versions have never been opened > second-binary-never-used 1`] = `
"┌─────────┬──────────────┐
│ [37mversion[39m │ [37mlast used[39m    │
├─────────┼──────────────┤
│ [32m1.2.3[39m   │ [36m3 months ago[39m │
├─────────┼──────────────┤
│ [32m2.3.4[39m   │ unknown      │
└─────────┴──────────────┘
"
`;

exports[`lib/tasks/cache > .path > lists path to cache 1`] = `
"/.cache/Cypress
"
`;

exports[`lib/tasks/cache > .prune > deletes cache binaries for all version but the current one 1`] = `
"Deleted all binary caches except for the 1.2.3 binary cache.
"
`;

exports[`lib/tasks/cache > .prune > doesn't delete any cache binaries 1`] = `
"No binary caches found to prune.
"
`;

exports[`lib/tasks/cache > .prune > exits cleanly if cache dir DNE 1`] = `
"No Cypress cache was found at /.cache/Cypress. Nothing to prune.
"
`;
